fix(components/molecule/progressSteps): justify bar alignment prop and fix compressed current tab vi
BREAKING CHANGES:

fix compressed current tab highlight

ISSUES CLOSED: 1405

--- a/components/molecule/progressSteps/demo/index.scss
+++ b/components/molecule/progressSteps/demo/index.scss
@@ -1,51 +1,61 @@
 @import '../src/index';
 
-.DemoMoleculeProgressSteps {
-  padding: 20px;
+.sui-MoleculeProgressSteps {
+  $this: &;
+  .DemoMoleculeProgressSteps {
+    padding: 20px;
 
-  h3 {
-    margin-top: 40px;
-  }
-
-  &-section--vertical &-contentStep {
-    margin: 0;
-  }
-
-  &-contentStep {
-    background: #ddd;
-    margin: 60px 0 0;
-    padding: 10px;
-  }
-
-  &-section {
-    border: 1px solid #ccc;
-    margin-bottom: 16px;
-    padding: 40px;
-
-    &--vertical {
-      height: 700px;
+    h3 {
+      margin-top: 40px;
     }
 
-    &-responsive {
+    &-section--vertical &-contentStep {
+      margin: 0;
+    }
+    &-contentStep {
+      background: #ddd;
+      padding: 10px;
+      box-sizing: border-box;
+      height: 100%;
+    }
+
+    &-section {
+      border: 1px solid #ccc;
+      margin-bottom: 16px;
+      padding: 40px;
+
+      &--vertical {
+        height: 700px;
+      }
+
+      &-responsive {
+        background: white;
+        border: 2px dashed blue;
+        margin-top: 10px;
+        overflow: hidden;
+        padding: 30px;
+        resize: horizontal;
+      }
+    }
+
+    .sui-MoleculePagination {
       background: white;
+      padding: 10px;
+    }
+
+    &--fullWidth {
       border: 2px dashed blue;
-      margin-top: 10px;
+      margin-right: 20px;
       overflow: hidden;
-      padding: 30px;
+      padding: 10px;
       resize: horizontal;
     }
   }
-
-  .sui-MoleculePagination {
-    background: white;
-    padding: 10px;
-  }
-
-  &--fullWidth {
-    border: 2px dashed blue;
-    margin-right: 20px;
-    overflow: hidden;
-    padding: 10px;
-    resize: horizontal;
+  &:not(&--vertical) {
+    .DemoMoleculeProgressSteps {
+      &-contentStep {
+        margin: 60px 0 0;
+      }
+    }
   }
 }
